--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,13 @@
 [tool.poetry]
-name = "TermiText"
-version = "0.1.9"
-description = "Color and format text in the console"
-readme = "README.md"
-authors = ["Yek <gwojtysiak34@gmail.com>"]
+name = "termitext"
+version = "0.1.0"
+description = ""
+authors = ["Yek <<>>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
